# aerocli

./: .gitignore  .travis.yml  LICENSE  Makefile  README  README.md  configure  configure.ac  index.html  install-snmp.sh  params.json  tempmake
doc/: aquaero5-hid.txt  payload-map-firmware-1027.txt  payload-map.txt
include/: Makefile.am  aquaero5-offsets.h  libaquaero5.h
src/: Makefile.am  aerocli.c  aq5rpcd.c  aquaero5-offsets.h  aquaero5-user-strings.h  libaquaero5.c  libaquaero5.h
utilities/: setsensor.sh
utilities/SNMP/: README  snmp_persist_aquaero5.pl
utilities/SNMP/Cacti/: README
utilities/SNMP/Cacti/data_queries/: cacti_data_query_aquaero_5_-_cpu_temperature_data.xml  cacti_data_query_aquaero_5_-_fan_data.xml  cacti_data_query_aquaero_5_-_flow_sensor_data.xml  cacti_data_query_aquaero_5_-_level_sensor_data.xml  cacti_data_query_aquaero_5_-_other_sensor_data.xml  cacti_data_query_aquaero_5_-_software_sensor_data.xml  cacti_data_query_aquaero_5_-_temperature_sensor_data.xml  cacti_data_query_aquaero_5_-_virtual_sensor_data.xml
utilities/SNMP/Cacti/snmp_queries/: aquaero5_CPU_temperature_data.xml  aquaero5_fan_data.xml  aquaero5_flow_sensor_data.xml  aquaero5_level_sensor_data.xml  aquaero5_other_sensor_data.xml  aquaero5_software_sensor_data.xml  aquaero5_temperature_sensor_data.xml  aquaero5_virtual_sensor_data.xml
utilities/munin-plugin/: aerocli-ng_  aerocli-ng_.py
utilities/munin-plugin/plugin-conf.d/: aerocli-ng.conf
